--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>404 Page not found - 6eon</title><meta name="Description" content="这是我的全新 Hugo 网站"><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="这是我的全新 Hugo 网站" />
+        <title>404 Page not found - 6eon | 博客</title><meta name="Description" content="If you&#39;re afraid to fail, then you&#39;re probably gone to fail"><meta property="og:title" content="404 Page not found" />
+<meta property="og:description" content="If you&#39;re afraid to fail, then you&#39;re probably gone to fail" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://liaozhijie8.github.io/404.html" /><meta property="og:image" content="https://liaozhijie8.github.io/logo.png"/><meta property="og:site_name" content="我的网站" />
 
@@ -13,7 +13,7 @@
 <meta name="twitter:image" content="https://liaozhijie8.github.io/logo.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="这是我的全新 Hugo 网站"/>
+<meta name="twitter:description" content="If you&#39;re afraid to fail, then you&#39;re probably gone to fail"/>
 <meta name="application-name" content="我的网站">
 <meta name="apple-mobile-web-app-title" content="我的网站"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -25,10 +25,10 @@
         <div id="mask"></div><div class="wrapper"><header class="desktop" id="header-desktop">
     <div class="header-wrapper">
         <div class="header-title">
-            <a href="/" title="6eon"><span id="id-1" class="typeit"></span></a>
+            <a href="/" title="6eon | 博客"><span id="id-1" class="typeit"></span></a>
         </div>
         <div class="menu">
-            <div class="menu-inner"><a class="menu-item" href="/posts/"> 文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
+            <div class="menu-inner"><a class="menu-item" href="/posts/"> 文章 </a><a class="menu-item" href="/tags/"> 标签 </a><a class="menu-item" href="/categories/"> 分类 </a><a class="menu-item" href="/about/"> 关于 </a><span class="menu-item delimiter"></span><span class="menu-item search" id="search-desktop">
                         <input type="text" placeholder="Search titles or contents..." id="search-input-desktop">
                         <a href="javascript:void(0);" class="search-button search-toggle" id="search-toggle-desktop" title="Search">
                             <i class="fas fa-search fa-fw" aria-hidden="true"></i>
@@ -48,7 +48,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-title">
-                <a href="/" title="6eon"><span id="id-2" class="typeit"></span></a>
+                <a href="/" title="6eon | 博客"><span id="id-2" class="typeit"></span></a>
             </div>
             <div class="menu-toggle" id="menu-toggle-mobile">
                 <span></span><span></span><span></span>
@@ -70,7 +70,7 @@
                     <a href="javascript:void(0);" class="search-cancel" id="search-cancel-mobile">
                         Cancel
                     </a>
-                </div><a class="menu-item" href="/posts/" title="">文章</a><a class="menu-item" href="/tags/" title="">标签</a><a class="menu-item" href="/categories/" title="">分类</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
+                </div><a class="menu-item" href="/posts/" title="">文章</a><a class="menu-item" href="/tags/" title="">标签</a><a class="menu-item" href="/categories/" title="">分类</a><a class="menu-item" href="/about/" title="">关于</a><a href="javascript:void(0);" class="menu-item theme-switch" title="Switch Theme">
                 <i class="fas fa-adjust fa-fw" aria-hidden="true"></i>
             </a></div>
     </div>
