--- a/vue不同版本api/index.html
+++ b/vue不同版本api/index.html
@@ -121,7 +121,7 @@
                 <i class="far fa-clock fa-fw" aria-hidden="true"></i>&nbsp;One minute&nbsp;<span id="/vue%E4%B8%8D%E5%90%8C%E7%89%88%E6%9C%ACapi/" class="leancloud_visitors" data-flag-title="Vue不同版本API">
                         <i class="far fa-eye fa-fw" aria-hidden="true"></i>&nbsp;<span class=leancloud-visitors-count></span>&nbsp;views
                     </span>&nbsp;</div>
-        </div><div class="details toc" id="toc-static"  data-kept="true">
+        </div><div class="details toc" id="toc-static"  data-kept="">
                 <div class="details-summary toc-title">
                     <span>Contents</span>
                     <span><i class="details-icon fas fa-angle-right" aria-hidden="true"></i></span>
