--- a/vue的状态管理/index.html
+++ b/vue的状态管理/index.html
@@ -121,7 +121,7 @@
                 <i class="far fa-clock fa-fw" aria-hidden="true"></i>&nbsp;One minute&nbsp;<span id="/vue%E7%9A%84%E7%8A%B6%E6%80%81%E7%AE%A1%E7%90%86/" class="leancloud_visitors" data-flag-title="Vue的状态管理">
                         <i class="far fa-eye fa-fw" aria-hidden="true"></i>&nbsp;<span class=leancloud-visitors-count></span>&nbsp;views
                     </span>&nbsp;</div>
-        </div><div class="details toc" id="toc-static"  data-kept="true">
+        </div><div class="details toc" id="toc-static"  data-kept="">
                 <div class="details-summary toc-title">
                     <span>Contents</span>
                     <span><i class="details-icon fas fa-angle-right" aria-hidden="true"></i></span>
