新增状态管理文章

--- a/about/index.html
+++ b/about/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
-        <title>About - 6eon | 博客</title><meta name="Description" content="If you&#39;re afraid to fail, then you&#39;re probably gone to fail"><meta property="og:title" content="About" />
+        <title>About - 6eon | 博客</title><meta name="Description" content="今天不学习,明天变废物"><meta property="og:title" content="About" />
 <meta property="og:description" content="关于 王者荣耀全能烹饪师" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://liaozhijie8.github.io/about/" /><meta property="og:image" content="https://liaozhijie8.github.io/tea.svg"/><meta property="article:section" content="" />
