--- a/about/index.html
+++ b/about/index.html
@@ -113,7 +113,7 @@
     </div><main class="main">
                 <div class="container"><div class="page single special"><h1 class="single-title animate__animated animate__pulse animate__faster">About</h1><div class="content" id="content"><center>关于
 <h1 id="王者荣耀全能烹饪师">王者荣耀全能烹饪师</h1>
-<!-- ![](../assets/image/wangzhe.jpg) -->
+<!-- ![](/assets/image/wangzhe.jpg) -->
 </div><div id="comments"><div id="valine" class="comment"></div><noscript>
                 Please enable JavaScript to view the comments powered by <a href="https://valine.js.org/">Valine</a>.
             </noscript></div></div></div>
